<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/img_copy"
        android:layout_below="@id/img_top"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingEnd="50dp"
        android:paddingStart="50dp">

        <TextView
            style="@style/SettingTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/m_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/txt_bg_white"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingTxtStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m_name" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <EditText
                    android:id="@+id/s_name"
                    style="@style/SettingEditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:focusable="false"
                    android:layout_toLeftOf="@id/btn_bt"/>
                <ImageButton
                    android:id="@+id/btn_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/transparent"
                    android:layout_marginEnd="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_bluetooth"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/txt_bg_white"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingTxtStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m_place" />

            <EditText
                android:id="@+id/s_place"
                style="@style/SettingEditStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/txt_bg_white"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingTxtStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m_user" />

            <EditText
                android:id="@+id/s_user"
                style="@style/SettingEditStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_save" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_back" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/copy" />

</RelativeLayout>